# GroundRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  config.py  docker-compose.yml  locustfile.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  api.py  auth.py  document_service.py
data/: users.json
data/docs/HR/: 年假管理制度.md  考勤管理制度.txt
data/docs/IT/: 网络管理规范.md
data/docs/研发/: 代码规范.md  开发流程.txt
data/docs/行政/: 办公用品领用管理办法.docx  采购分级标准.xlsx
data/docs/财务/: 差旅报销标准.xlsx  报销管理制度.docx
docs/: RAG参数调参方法论.md  RAG故障排查.md  RAG故障模式对照.md  RAG调参落地手册.md  retrieval_optimization-深度分析.md  架构文档.md  源码学习指南.md  源码深度解读.md  源码精讲与面试深度拷问.md  环境配置.md  踩坑实录.md  面试攻防手册.md
docs/superpowers/plans/: 2026-07-01-config-cleanup.md  2026-07-01-rag-tuning-tooling.md  (+6 more)
evaluation/: ab_compare.py  ab_result.json  complex_doc_test.py  eval_dataset.jsonl  eval_result.json  fuzzy_eval.jsonl  generate_fuzzy_eval.py  run_eval.py  sweep_result.json  sweep_retrieval.py
rag_modules/: cache_service.py  data_preparation.py  generation_integration.py  index_construction.py  llm_factory.py  llm_fallback.py  logging_config.py  observability.py  reranker.py  retrieval_optimization.py  tracer.py  user_service.py
scripts/: demo_setup.py  make_sample_docs.py
tests/: conftest.py  test_api_runtime.py  test_api_streaming.py  test_core.py  test_demo_setup.py  test_documents_api.py  test_index_incremental.py  test_rbac_subindex.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/api/: sse.ts  (+1 more)
(+25 files in other folders)
